added seven blocks

--- a/app/index.dev.html
+++ b/app/index.dev.html
@@ -17,6 +17,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" href="./css/style.min.css">
 </head>
 
@@ -254,10 +255,407 @@
           </div>
         </div>
       </section>
+      <section class="services">
+        <div class="container">
+          <h2 class="services__title title">
+            Выполняем весь спектр услуг по озеленени. помещений
+          </h2>
+          <div class="services__slider slider">
+            <div class="services__slide slider__slide">
+              <div class="services__slide-item slider__slide-item">
+                <img class="services__slide-img" src="images/sec-6/1.webp" alt="slide image">
+                <div class="services__slide-info">
+                  <h4 class="services__slide-title">
+                    Проектируем
+                  </h4>
+                </div>
+              </div>
+            </div>
+            <div class="services__slide slider__slide">
+              <div class="services__slide-item slider__slide-item">
+                <img class="services__slide-img" src="images/sec-6/2.webp" alt="slide image">
+                <div class="services__slide-info">
+                  <h4 class="services__slide-title">
+                    Подбираем свет
+                  </h4>
+                </div>
+              </div>
+            </div>
+            <div class="services__slide slider__slide">
+              <div class="services__slide-item slider__slide-item">
+                <img class="services__slide-img" src="images/sec-6/3.webp" alt="slide image">
+                <div class="services__slide-info">
+                  <h4 class="services__slide-title">
+                    Устанавливаем автополив
+                  </h4>
+                </div>
+              </div>
+            </div>
+            <div class="services__slide slider__slide">
+              <div class="services__slide-item slider__slide-item">
+                <img class="services__slide-img" src="images/sec-6/4.webp" alt="slide image">
+                <div class="services__slide-info">
+                  <h4 class="services__slide-title">
+                    Подбор растений биологом
+                  </h4>
+                </div>
+              </div>
+            </div>
+            <div class="services__slide slider__slide">
+              <div class="services__slide-item slider__slide-item">
+                <img class="services__slide-img" src="images/sec-6/5.webp" alt="slide image">
+                <div class="services__slide-info">
+                  <h4 class="services__slide-title">
+                    Учитываем бюджет проекта
+                  </h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="consultation">
+        <div class="container">
+          <h2 class="consultation__title title-bold">
+            Получить консультацию
+          </h2>
+          <p class="consultation__subtitle">
+            <span>Заполните форму</span> и наш специалист свяжется с вами
+          </p>
+          <form class="consultation__form" action="#" method="get">
+            <input class="consultation__form-input" type="text" placeholder="Ваше имя">
+            <input class="consultation__form-input" type="tel" placeholder="Телефон">
+            <button class="consultation__form-btn" type="submit">Получить консультацию</button>
+            <label class="consultation__form-label checkbox-box">
+              <input class="checkbox-box__inp" type="checkbox">
+              <span class="checkbox-box__check"></span>
+              <p class="checkbox-box__text">
+                Я согласен на обработку персональных данных
+              </p>
+            </label>
+          </form>
+        </div>
+      </section>
+      <section class="portfolio">
+        <div class="container">
+          <h2 class="portfolio__title title">
+            За 10 лет работы нами выполнено более 1000 проектов
+          </h2>
+          <div class="portfolio__items">
+            <div class="portfolio__item">
+              <img class="portfolio__item-img" src="images/sec-8/1.webp" alt="example">
+              <div class="portfolio__item-info">
+                <h4 class="portfolio__item-title">
+                  Проект “Родной сад”
+                </h4>
+                <p class="portfolio__item-text">
+                  Зеленые стены - модное направление фитодекора, ведь это не только необычное украшение интерьера, но и
+                  близость к
+                  природе...
+                </p>
+                <div class="portfolio__item-bottom">
+                  <a class="portfolio__item-link" href="#">
+                    12.04.2023
+                  </a>
+                  <a class="portfolio__item-link" href="#">
+                    Подробнее
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio__item">
+              <img class="portfolio__item-img" src="images/sec-8/2.webp" alt="example">
+              <div class="portfolio__item-info">
+                <h4 class="portfolio__item-title">
+                  Проект “Родной сад”
+                </h4>
+                <p class="portfolio__item-text">
+                  Зеленые стены - модное направление фитодекора, ведь это не только необычное украшение интерьера, но и
+                  близость к
+                  природе...
+                </p>
+                <div class="portfolio__item-bottom">
+                  <a class="portfolio__item-link" href="#">
+                    12.04.2023
+                  </a>
+                  <a class="portfolio__item-link" href="#">
+                    Подробнее
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio__item">
+              <img class="portfolio__item-img" src="images/sec-8/3.webp" alt="example">
+              <div class="portfolio__item-info">
+                <h4 class="portfolio__item-title">
+                  Проект “Родной сад”
+                </h4>
+                <p class="portfolio__item-text">
+                  Зеленые стены - модное направление фитодекора, ведь это не только необычное украшение интерьера, но и
+                  близость к
+                  природе...
+                </p>
+                <div class="portfolio__item-bottom">
+                  <a class="portfolio__item-link" href="#">
+                    12.04.2023
+                  </a>
+                  <a class="portfolio__item-link" href="#">
+                    Подробнее
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio__item">
+              <img class="portfolio__item-img" src="images/sec-8/4.webp" alt="example">
+              <div class="portfolio__item-info">
+                <h4 class="portfolio__item-title">
+                  Проект “Родной сад”
+                </h4>
+                <p class="portfolio__item-text">
+                  Зеленые стены - модное направление фитодекора, ведь это не только необычное украшение интерьера, но и
+                  близость к
+                  природе...
+                </p>
+                <div class="portfolio__item-bottom">
+                  <a class="portfolio__item-link" href="#">
+                    12.04.2023
+                  </a>
+                  <a class="portfolio__item-link" href="#">
+                    Подробнее
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio__item">
+              <img class="portfolio__item-img" src="images/sec-8/5.webp" alt="example">
+              <div class="portfolio__item-info">
+                <h4 class="portfolio__item-title">
+                  Проект “Родной сад”
+                </h4>
+                <p class="portfolio__item-text">
+                  Зеленые стены - модное направление фитодекора, ведь это не только необычное украшение интерьера, но и
+                  близость к
+                  природе...
+                </p>
+                <div class="portfolio__item-bottom">
+                  <a class="portfolio__item-link" href="#">
+                    12.04.2023
+                  </a>
+                  <a class="portfolio__item-link" href="#">
+                    Подробнее
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio__item">
+              <img class="portfolio__item-img" src="images/sec-8/6.webp" alt="example">
+              <div class="portfolio__item-info">
+                <h4 class="portfolio__item-title">
+                  Проект “Родной сад”
+                </h4>
+                <p class="portfolio__item-text">
+                  Зеленые стены - модное направление фитодекора, ведь это не только необычное украшение интерьера, но и
+                  близость к
+                  природе...
+                </p>
+                <div class="portfolio__item-bottom">
+                  <a class="portfolio__item-link" href="#">
+                    12.04.2023
+                  </a>
+                  <a class="portfolio__item-link" href="#">
+                    Подробнее
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="portfolio__btn" type="button">
+            Смотреть больше
+          </button>
+        </div>
+      </section>
+      <section class="reviews">
+        <div class="container">
+          <h2 class="reviews__title title">
+            Отзывы наших клиентов
+          </h2>
+          <div class="reviews__slider slider">
+            <div class="reviews__slide slider__slide">
+              <div class="reviews__slide-item slider__slide-item">
+                <img class="reviews__slide-img" src="images/sec-9/1.webp" alt="slide image">
+              </div>
+            </div>
+            <div class="reviews__slide slider__slide">
+              <div class="reviews__slide-item slider__slide-item">
+                <img class="reviews__slide-img" src="images/sec-9/1.webp" alt="slide image">
+              </div>
+            </div>
+            <div class="reviews__slide slider__slide">
+              <div class="reviews__slide-item slider__slide-item">
+                <img class="reviews__slide-img" src="images/sec-9/1.webp" alt="slide image">
+              </div>
+            </div>
+            <div class="reviews__slide slider__slide">
+              <div class="reviews__slide-item slider__slide-item">
+                <img class="reviews__slide-img" src="images/sec-9/1.webp" alt="slide image">
+              </div>
+            </div>
+            <div class="reviews__slide slider__slide">
+              <div class="reviews__slide-item slider__slide-item">
+                <img class="reviews__slide-img" src="images/sec-9/1.webp" alt="slide image">
+              </div>
+            </div>
+            <div class="reviews__slide slider__slide">
+              <div class="reviews__slide-item slider__slide-item">
+                <img class="reviews__slide-img" src="images/sec-9/1.webp" alt="slide image">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="reviews-bottom">
+          <div class="container">
+            <div class="reviews-bottom__items cards-2">
+              <div class="reviews-bottom__item cards-2__item">
+                <img class="cards-2__item-img" src="images/sec-10/1.webp" alt="landscaping">
+                <p class="cards-2__descr">
+                  <strong>Собственное</strong><br> производство
+                </p>
+              </div>
+              <div class="reviews-bottom__item cards-2__item">
+                <img class="cards-2__item-img" src="images/sec-10/2.webp" alt="landscaping">
+                <p class="cards-2__descr">
+                  <strong>Прямые поставки</strong> растений<br> из питомников <strong>Нидерландов</strong> без
+                  посредников
+                </p>
+              </div>
+              <div class="reviews-bottom__item cards-2__item">
+                <img class="cards-2__item-img" src="images/sec-10/3.webp" alt="landscaping">
+                <p class="cards-2__descr">
+                  <strong>Опыт</strong> озеленения<br> помещений <strong> более 10 лет</strong>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="team">
+        <div class="container">
+          <h2 class="team__title title">
+            Наша команда профессионалов
+          </h2>
+          <div class="team__items">
+            <div class="team__item">
+              <img class="team__item-img" src="images/sec-11.webp" alt="team">
+              <div class="team__item-info">
+                <h4 class="team__item-title">
+                  Персональный менеджер
+                </h4>
+                <p class="team__item-text">
+                  В проекте отвечает за сбор информации от заказчика и пеердачу всей информации всем специалистам в
+                  процессе разработки.
+                </p>
+              </div>
+            </div>
+            <div class="team__item">
+              <img class="team__item-img" src="images/sec-11.webp" alt="team">
+              <div class="team__item-info">
+                <h4 class="team__item-title">
+                  Биолог
+                </h4>
+                <p class="team__item-text">
+                  В проекте отвечает за сбор информации от заказчика и пеердачу всей информации всем специалистам в
+                  процессе разработки.
+                </p>
+              </div>
+            </div>
+            <div class="team__item">
+              <img class="team__item-img" src="images/sec-11.webp" alt="team">
+              <div class="team__item-info">
+                <h4 class="team__item-title">
+                  Проектировщик/Дизайнер
+                </h4>
+                <p class="team__item-text">
+                  В проекте отвечает за сбор информации от заказчика и пеердачу всей информации всем специалистам в
+                  процессе разработки.
+                </p>
+              </div>
+            </div>
+            <div class="team__item">
+              <img class="team__item-img" src="images/sec-11.webp" alt="team">
+              <div class="team__item-info">
+                <h4 class="team__item-title">
+                  Технический руководитель проектов
+                </h4>
+                <p class="team__item-text">
+                  В проекте отвечает за сбор информации от заказчика и пеердачу всей информации всем специалистам в
+                  процессе разработки.
+                </p>
+              </div>
+            </div>
+            <div class="team__item">
+              <img class="team__item-img" src="images/sec-11.webp" alt="team">
+              <div class="team__item-info">
+                <h4 class="team__item-title">
+                  Руководитель контроля и реализации
+                </h4>
+                <p class="team__item-text">
+                  В проекте отвечает за сбор информации от заказчика и пеердачу всей информации всем специалистам в
+                  процессе разработки.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="guarantee">
+        <div class="container">
+          <h2 class="guarantee__title title">
+            Берем на себя 5 гарантийных обязательств
+          </h2>
+          <p class="guarantee__subtitle">
+            Которые не могут позволить себе другие производители и закрепляем их в договоре
+          </p>
+          <div class="guarantee__items">
+            <div class="guarantee__item">
+              <img class="guarantee__item-img" src="images/icons/live-plants.svg" alt="">
+              <p class="guarantee__item-text">
+                <strong>Гарантия 1 месяц</strong> на живые растения
+              </p>
+            </div>
+            <div class="guarantee__item">
+              <img class="guarantee__item-img" src="images/icons/artificial-plants.svg" alt="">
+              <p class="guarantee__item-text">
+                <strong>Гарантия 3 года</strong> на искусственные растения
+              </p>
+            </div>
+            <div class="guarantee__item">
+              <img class="guarantee__item-img" src="images/icons/guarantee.svg" alt="">
+              <p class="guarantee__item-text">
+                <strong>Гарантия 5 лет</strong> на стабилизированный мох
+              </p>
+            </div>
+            <div class="guarantee__item">
+              <img class="guarantee__item-img" src="images/icons/gear.svg" alt="">
+              <p class="guarantee__item-text">
+                <strong>Гарантия 1 год</strong> на монтажные работы
+              </p>
+            </div>
+            <div class="guarantee__item">
+              <img class="guarantee__item-img" src="images/icons/building.svg" alt="">
+              <p class="guarantee__item-text">
+                <strong>Гарантия 3 год</strong> на конструкции вертикального озеленения
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!--=include footer.html -->
 
   </div>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="./js/main.min.js"></script>
 </body>
 
