added all blocks

--- a/app/index.dev.html
+++ b/app/index.dev.html
@@ -73,6 +73,7 @@
             </div>
           </div>
         </div>
+        <img class="decor decor-1" src="images/1.webp" alt="1">
       </section>
       <section class="section-2">
         <div class="container">
@@ -103,6 +104,7 @@
             </div>
           </div>
         </div>
+        <img class="decor decor-2" src="images/2.webp" alt="2">
       </section>
       <section class="landscaping">
         <div class="container">
@@ -170,6 +172,7 @@
             </div>
           </div>
         </div>
+        <img class="decor decor-3" src="images/3.webp" alt="3">
       </section>
       <section class="quality">
         <div class="container">
@@ -254,6 +257,8 @@
             </div>
           </div>
         </div>
+        <img class="decor decor-4" src="images/4.webp" alt="4">
+        <img class="decor decor-5" src="images/5.webp" alt="5">
       </section>
       <section class="services">
         <div class="container">
@@ -473,6 +478,8 @@
             Смотреть больше
           </button>
         </div>
+        <img class="decor decor-6" src="images/6.webp" alt="6">
+        <img class="decor decor-7" src="images/7.webp" alt="7">
       </section>
       <section class="reviews">
         <div class="container">
@@ -606,6 +613,8 @@
             </div>
           </div>
         </div>
+        <img class="decor decor-8" src="images/8.webp" alt="8">
+        <img class="decor decor-9" src="images/9.webp" alt="9">
       </section>
       <section class="guarantee">
         <div class="container">
@@ -648,6 +657,128 @@
             </div>
           </div>
         </div>
+      </section>
+      <section class="advantages">
+        <div class="container">
+          <h2 class="advantages__title title">
+            Плюсы собственного производства
+          </h2>
+          <div class="advantages__items">
+            <div class="advantages__item">
+              <p class="advantages__item-top">Критерии</p>
+              <p class="advantages__item-top">Собственное производство</p>
+              <p class="advantages__item-top">Работа с посредником</p>
+            </div>
+            <div class="advantages__item">
+              <p class="advantages__item-text">
+                Постоянное наличие растений на складе
+              </p>
+              <div class="advantages__item-check"></div>
+              <div class="advantages__item-minus"></div>
+            </div>
+            <div class="advantages__item">
+              <p class="advantages__item-text">
+                Постоянное наличие растений на складе
+              </p>
+              <div class="advantages__item-check"></div>
+              <div class="advantages__item-minus"></div>
+            </div>
+            <div class="advantages__item">
+              <p class="advantages__item-text">
+                Постоянное наличие растений на складе
+              </p>
+              <div class="advantages__item-check"></div>
+              <div class="advantages__item-minus"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="consultation-2">
+        <div class="container">
+          <div class="consultation-2__inner">
+            <h2 class="consultation-2__title title-bold">
+              Получить консультацию
+            </h2>
+            <p class="consultation-2__subtitle">
+              <span>Заполните форму</span> и наш специалист свяжется с вами
+            </p>
+            <form class="consultation-2__form" action="#" method="get">
+              <input class="consultation-2__form-input" type="text" placeholder="Ваше имя">
+              <input class="consultation-2__form-input" type="tel" placeholder="Телефон">
+              <button class="consultation-2__form-btn" type="submit">Получить консультацию</button>
+              <label class="consultation-2__form-label checkbox-box">
+                <input class="checkbox-box__inp" type="checkbox">
+                <span class="checkbox-box__check"></span>
+                <p class="checkbox-box__text">
+                  Я согласен на обработку персональных данных
+                </p>
+              </label>
+            </form>
+          </div>
+        </div>
+      </section>
+      <section class="questions">
+        <div class="container">
+          <h2 class="questions__title title">
+            Часто задаваемые вопросы
+          </h2>
+          <div class="questions__items">
+            <div class="questions__item">
+              <div class="questions__item-top active">
+                <p class="questions__item-question">
+                  С какими компаниями мы работем?
+                </p>
+                <div class="open-item">+</div>
+              </div>
+              <p class="questions__item-bottom">
+                Более 400 компаний и частных клиентов доверили нам озеленение коммерческих и жилых помещений. Среди них — «Газрегион»,
+                «Интоп», «Газтехлизинг», «Гема-Моторс», банк «Открытие», разработчик мобильных игр «Zeptolab», авиакомпания «Якутия» и
+                другие
+              </p>
+            </div>
+            <div class="questions__item">
+              <div class="questions__item-top">
+                <p class="questions__item-question">
+                  Какие условия нужны для поддержания растений?
+                </p>
+                <div class="open-item">+</div>
+              </div>
+              <p class="questions__item-bottom">
+                Более 400 компаний и частных клиентов доверили нам озеленение коммерческих и жилых помещений. Среди них — «Газрегион»,
+                «Интоп», «Газтехлизинг», «Гема-Моторс», банк «Открытие», разработчик мобильных игр «Zeptolab», авиакомпания «Якутия» и
+                другие
+              </p>
+            </div>
+            <div class="questions__item">
+              <div class="questions__item-top">
+                <p class="questions__item-question">
+                  Кто проводит замеры на объекте?
+                </p>
+                <div class="open-item">+</div>
+              </div>
+              <p class="questions__item-bottom">
+                Более 400 компаний и частных клиентов доверили нам озеленение коммерческих и жилых помещений. Среди них — «Газрегион»,
+                «Интоп», «Газтехлизинг», «Гема-Моторс», банк «Открытие», разработчик мобильных игр «Zeptolab», авиакомпания «Якутия» и
+                другие
+              </p>
+            </div>
+            <div class="questions__item">
+              <div class="questions__item-top">
+                <p class="questions__item-question">
+                  Можно ли с нами сотрудничать другим фирмам по озеленению?
+                </p>
+                <div class="open-item">+</div>
+              </div>
+              <p class="questions__item-bottom">
+                Более 400 компаний и частных клиентов доверили нам озеленение коммерческих и жилых помещений. Среди них — «Газрегион»,
+                «Интоп», «Газтехлизинг», «Гема-Моторс», банк «Открытие», разработчик мобильных игр «Zeptolab», авиакомпания «Якутия» и
+                другие
+              </p>
+            </div>
+          </div>
+        </div>
+        <img class="decor decor-10" src="images/10.webp" alt="10">
+        <img class="decor decor-11" src="images/11.webp" alt="11">
       </section>
     </main>
     <!--=include footer.html -->
